--- a/compose.yaml
+++ b/compose.yaml
@@ -8,34 +8,43 @@
 # database or a cache. For examples, see the Awesome Compose repository:
 # https://github.com/docker/awesome-compose
 services:
-  server:
-    build:
-      context: .
-    environment:
-      NODE_ENV: production
-    ports:
-      - 4000:4000
-
-# The commented out section below is an example of how to define a PostgreSQL
-# database that your application can use. `depends_on` tells Docker Compose to
-# start the database before your application. The `db-data` volume persists the
-# database data between container restarts. The `db-password` secret is used
-# to set the database password. You must create `db/password.txt` and add
-# a password of your choosing to it before running `docker-compose up`.
-#     depends_on:
-#       db:
-#         condition: service_healthy
-#   db:
-#     image: postgres
-#     restart: always
+  db:
+    container_name: pg_db
+    image: postgres
+    restart: always
 #     user: postgres
 #     secrets:
 #       - db-password
 #     volumes:
 #       - db-data:/var/lib/postgresql/data
-#     environment:
-#       - POSTGRES_DB=example
-#       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
+    environment:
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+      - POSTGRES_DB=rootdb
+    ports:
+      - 5432:5432
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+  server:
+    build:
+      context: .
+    ports:
+      - 4000:4000
+    environment:
+      NODE_ENV: production
+    depends_on:
+      - db
+    env_file:
+      - .env
+      # DATABASE_URL: "postgresql://postgres:12345@localhost:5432/db?schema=public"
+      # POSTGRES_HOST: db
+      # POSTGRES_USER: postgres
+      # POSTGRES_PASSWORD_FILE: /run/secrets/db-password
+      # POSTGRES_DB: example
+    # depends_on:
+    #   db:
+    #     condition: service_healthy
+
 #     expose:
 #       - 5432
 #     healthcheck:
@@ -43,9 +52,16 @@ services:
 #       interval: 10s
 #       timeout: 5s
 #       retries: 5
-# volumes:
+volumes:
+  postgres-data:
 #   db-data:
 # secrets:
 #   db-password:
 #     file: db/password.txt
 
+# The commented out section below is an example of how to define a PostgreSQL
+# database that your application can use. `depends_on` tells Docker Compose to
+# start the database before your application. The `db-data` volume persists the
+# database data between container restarts. The `db-password` secret is used
+# to set the database password. You must create `db/password.txt` and add
+# a password of your choosing to it before running `docker-compose up`.
