feat: add user-defined bridge

--- a/compose.yaml
+++ b/compose.yaml
@@ -4,6 +4,8 @@ services:
       context: .
     ports:
       - 4000:4000
+    networks:
+      - rsschool
     environment:
       NODE_ENV: production
     depends_on:
@@ -19,7 +21,13 @@ services:
       - POSTGRES_DB=rootdb
     ports:
       - 5432:5432
+    networks:
+      - rsschool
     volumes:
       - postgres:/var/lib/postgresql/data
+networks:
+  rsschool:
+    # name: rsschool
+    driver: bridge
 volumes:
   postgres:
