feat: add restarting the app

--- a/compose.yaml
+++ b/compose.yaml
@@ -12,6 +12,7 @@ services:
       - postgres
     env_file:
       - .env
+    restart: always
   postgres:
     image: postgres
     restart: always
