--- a/compose.yaml
+++ b/compose.yaml
@@ -13,6 +13,10 @@ services:
     env_file:
       - .env
     restart: always
+    develop:
+      watch: 
+        - path: ./src
+          action: rebuild
   postgres:
     image: postgres
     restart: always
@@ -28,7 +32,6 @@ services:
       - postgres:/var/lib/postgresql/data
 networks:
   rsschool:
-    # name: rsschool
     driver: bridge
 volumes:
   postgres:
