--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "start:prod": "node dist/src/main",
     "start:migrate:prod": "prisma migrate deploy && npm run start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "scanner:quick": "docker scout quickview nodejs2024q1-service-rss-home-lib",
+    "scanner:recomm": "docker scout recommendations nodejs2024q1-service-rss-home-lib",
     "test": "jest --testMatch \"<rootDir>/*.spec.ts\" --noStackTrace --runInBand",
     "test:auth": "cross-env TEST_MODE=auth jest --testPathIgnorePatterns refresh.e2e.spec.ts --noStackTrace --runInBand",
     "test:refresh": "cross-env TEST_MODE=auth jest --testPathPattern refresh.e2e.spec.ts --noStackTrace --runInBand",
