--- a/compose.yaml
+++ b/compose.yaml
@@ -20,10 +20,8 @@ services:
   postgres:
     image: postgres
     restart: always
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=root
-      - POSTGRES_DB=rootdb
+    env_file:
+      - .env
     ports:
       - 5432:5432
     networks:
