feat: update env example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 DATABASE_URL=postgresql://postgres:root@postgres:5432/rootdb?schema=public
 PORT=4000
 
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=root
+POSTGRES_DB=rootdb
+
+
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
 JWT_SECRET_REFRESH_KEY=secret123123
