feat: add logger module

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=root
 POSTGRES_DB=rootdb
 
+LOGGER_LEVEL=log,fatal,error,warn,debug,verbose
 
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
