--- a/compose.yaml
+++ b/compose.yaml
@@ -2,8 +2,6 @@ services:
   rss-home-lib:
     build:
       context: .
-    ports:
-      - 4000:4000
     networks:
       - rsschool
     environment:
@@ -12,6 +10,8 @@ services:
       - postgres
     env_file:
       - .env
+    ports:
+      - ${PORT}:${PORT}
     restart: always
     develop:
       watch: 
@@ -23,7 +23,7 @@ services:
     env_file:
       - .env
     ports:
-      - 5432:5432
+      - ${POSTGRES_PORT}:${POSTGRES_PORT}
     networks:
       - rsschool
     volumes:
