--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ POSTGRES_DB=rootdb
 POSTGRES_PORT=5432
 
 LOGGER_LEVEL=log,fatal,error,warn,debug,verbose
+LOGGER_FILE_SIZE=64000
 
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
